# zero2prod

./: Cargo.toml  configuration.yaml
.github/: general.yml
.github/workflows/: audit-on-push.yml  general.yml
migrations/: 20230117233749_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
