[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Bruno Marques <brunolmarques@gmail.com."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = "1"

# Dev dependencies are used exclusively when running tests
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.11"